# staex-ioa

./: Cargo.toml  Makefile  README.md
peaq-client/: README.md
provisioner/: Cargo.toml
provisioner/src/: asd.rs  main.rs
ui/: Makefile  README.md  bun.lockb  index.js  package-lock.json  package.json  run.sh
