[workspace.package]
version = "0.1.0"

[workspace]
members = ["provisioner", "peaq-gen", "peaq-client"]
default-members = ["provisioner", "peaq-gen"]
resolver = "2"

[workspace.dependencies]
subxt = { version = "0.34.0", features = ["substrate-compat"], default-features = true }
subxt-signer = { version = "0.34.0", features = [], default-features = true }
